apps/lychee/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lychee
  namespace: lychee
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lychee
  template:
    metadata:
      labels:
        app: lychee
    spec:
      containers:
        - name: lychee
          image: lycheeorg/lychee:latest
          ports:
            - name: http
              containerPort: 8000
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 1000m
              memory: 1Gi
          volumeMounts:
            - name: config
              mountPath: /conf
            - name: uploads
              mountPath: /uploads
              subPath: Filippo/Foto
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: lychee-config
        - name: uploads
          persistentVolumeClaim:
            claimName: lychee-uploads
