apps/lychee/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lychee
  namespace: lychee
spec:
  selector:
    app: lychee
  ports:
    - name: http
      port: 8000
      targetPort: 8000
